--- a/1_interpolation/makefile
+++ b/1_interpolation/makefile
@@ -6,7 +6,12 @@ A: A.dat plotA.ppl
 A.dat: splineA
 	./splineA
 
-splineA: splineA.c
+splineA: splineA.c lspline.o qspline_eval.o qspline_alloc.o qspline_free.o
+
+lspline.o: lspline.c
+qspline_eval.o: qspline_eval.c
+qspline_alloc.o: qspline_alloc.c
+qspline_free.o: qspline_free.c
 
 clean:
-	rm -f *.dat splineA
+	rm -f *.dat splineA *.o
