finished task B of interpolation

--- a/1_interpolation/makefile
+++ b/1_interpolation/makefile
@@ -1,12 +1,30 @@
 CFLAGS = -Wall -lm -std=gnu99 -g
 
+# All
+all: A B
+
+clean: cleanA cleanB
+
+# Project A
 A: A.dat plotA.ppl
 	pyxplot plotA.ppl
 
-A.dat: splineA
-	./splineA
+A.dat: mainA
+	./mainA
 
-splineA: splineA.c qspline.h lspline.h
+mainA: mainA.c qspline.h lspline.h
 
-clean:
-	rm -f *.dat splineA *.o *.pdf
+cleanA:
+	rm -f A.dat mainA plotA.pdf
+
+# Project B
+B: B.dat plotB.ppl
+	pyxplot plotB.ppl
+
+B.dat: mainB
+	./mainB
+
+mainB: mainB.c qspline.h
+
+cleanB:
+	rm -f B.dat mainB plotB.pdf
