chuck almost done with task C, interpolation

--- a/1_interpolation/makefile
+++ b/1_interpolation/makefile
@@ -1,9 +1,9 @@
 CFLAGS = -Wall -lm -std=gnu99 -g
 
 # All
-all: A B
+all: A B C
 
-clean: cleanA cleanB
+clean: cleanA cleanB cleanC
 
 # Project A
 A: A.dat plotA.ppl
@@ -28,3 +28,15 @@ mainB: mainB.c qspline.h
 
 cleanB:
 	rm -f B.dat mainB plotB.pdf
+	
+# Project B
+C: C.dat plotC.ppl
+	pyxplot plotC.ppl
+
+C.dat: mainC
+	./mainC
+
+mainC: mainC.c cspline.h
+
+cleanC:
+	rm -f C.dat mainC plotC.pdf
