Fixed problem with setting second derivative in cubic spline

--- a/1_interpolation/makefile
+++ b/1_interpolation/makefile
@@ -5,6 +5,11 @@ all: A B C
 
 clean: cleanA cleanB cleanC
 
+# Object files
+lspline.o: lspline.c
+qspline.o: qspline.c
+cspline.o: cspline.c
+
 # Project A
 A: A.dat plotA.ppl
 	pyxplot plotA.ppl
@@ -12,10 +17,10 @@ A: A.dat plotA.ppl
 A.dat: mainA
 	./mainA
 
-mainA: mainA.c qspline.h lspline.h
+mainA: mainA.c qspline.h lspline.h lspline.o qspline.o
 
 cleanA:
-	rm -f A.dat mainA plotA.pdf
+	rm -f A.dat mainA plotA.pdf *.o
 
 # Project B
 B: B.dat plotB.ppl
@@ -24,10 +29,10 @@ B: B.dat plotB.ppl
 B.dat: mainB
 	./mainB
 
-mainB: mainB.c qspline.h
+mainB: mainB.c qspline.h qspline.o
 
 cleanB:
-	rm -f B.dat mainB plotB.pdf
+	rm -f B.dat mainB plotB.pdf *.o
 	
 # Project B
 C: C.dat plotC.ppl
@@ -36,7 +41,7 @@ C: C.dat plotC.ppl
 C.dat: mainC
 	./mainC
 
-mainC: mainC.c cspline.h
+mainC: mainC.c cspline.h cspline.o
 
 cleanC:
-	rm -f C.dat mainC plotC.pdf
+	rm -f C.dat mainC plotC.pdf *.o
