Finished "2 -- linear equations" with a lot of rough edges

--- a/1_interpolation/makefile
+++ b/1_interpolation/makefile
@@ -6,7 +6,8 @@ LDLIBS += `gsl-config --libs`
 # All
 all: A B C
 
-clean: cleanA cleanB cleanC
+clean:
+	rm -f *.o *.out *.pdf mainA mainB mainC
 
 # Object files
 lspline.o: lspline.c
@@ -22,9 +23,6 @@ A.dat: mainA
 
 mainA: mainA.c qspline.h lspline.h lspline.o qspline.o
 
-cleanA:
-	rm -f A.dat mainA plotA.pdf *.o
-
 # Project B
 B: B.dat plotB.ppl
 	pyxplot plotB.ppl
@@ -34,9 +32,6 @@ B.dat: mainB
 
 mainB: mainB.c qspline.h qspline.o
 
-cleanB:
-	rm -f B.dat mainB plotB.pdf *.o
-	
 # Project B
 C: C.dat plotC.ppl
 	pyxplot plotC.ppl
@@ -45,6 +40,3 @@ C.dat: mainC
 	./mainC
 
 mainC: mainC.c cspline.h cspline.o
-
-cleanC:
-	rm -f C.dat mainC plotC.pdf *.o
