Finished task A, 6: minimisation

--- a/6_minimisation/makefile
+++ b/6_minimisation/makefile
@@ -14,9 +14,10 @@ backsub.o: ../2_lineq/backsub.c ../2_lineq/backsub.h
 	$(CC) $(CLFAGS) -c $< -o $@
 givens.o: ../2_lineq/givens.c ../2_lineq/givens.h
 	$(CC) $(CFLAGS) -c $< -o $@
+optim.o: optim.c optim.h
 
 # Task A
 A: mainA
 	./mainA 1> A.out
-mainA: mainA.c givens.o backsub.o
+mainA: mainA.c givens.o backsub.o optim.o
 
