Added libs folder for future editing of previous assignments code made further adjustments to 5: roots finished task B of 6: minimisation

--- a/5_roots/makefile
+++ b/5_roots/makefile
@@ -14,20 +14,22 @@ backsub.o: ../2_lineq/backsub.c ../2_lineq/backsub.h
 	$(CC) $(CLFAGS) -c $< -o $@
 givens.o: ../2_lineq/givens.c ../2_lineq/givens.h
 	$(CC) $(CFLAGS) -c $< -o $@
+vector.o: ../libs/vector.c ../libs/vector.h
+	$(CC) $(CFLAGS) -c $< -o $@
 newton.o: newton.c newton.h
 
 # Task A
 A: mainA
 	./mainA 1> A.out
-mainA: mainA.c givens.o backsub.o newton.o
+mainA: mainA.c givens.o backsub.o newton.o vector.o
 
 # Task B
 B: mainB
 	./mainB 1> B.out
-mainB: mainB.c givens.o backsub.o newton.o
+mainB: mainB.c givens.o backsub.o newton.o vector.o
 
 # Task C
 C: mainC
 	./mainC 1> C.out
-mainC: mainC.c givens.o backsub.o newton.o
+mainC: mainC.c givens.o backsub.o newton.o vector.o
 
