finished 7: ODE and task A & B of 8: adaptive integration

--- a/8_adaptive_integration/makefile
+++ b/8_adaptive_integration/makefile
@@ -4,10 +4,10 @@ CFLAGS += `gsl-config --cflags`
 LDLIBS += `gsl-config --libs`
 
 # Overall
-all: A
+all: A B
 
 clean:
-	rm -f *.o *.dat *.out *.pdf mainA mainB mainC
+	rm -f *.o *.out *.pdf mainA mainB mainC
 
 # Object files
 ode_rkf45.o: ../7_ode/ode_rkf45.c ../7_ode/ode_rkfe5.h
@@ -18,6 +18,8 @@ ode_integrate.o: ../7_ode/ode_integrate.c ../7_ode/ode_integrate.h
 	$(CC) $(CFLAGS) -c $< -o $@
 qarc.o: qarc.c qarc.h
 qaro.o: qaro.c qaro.h
+qasc.o: qasc.c qasc.h
+qaso.o: qaso.c qaso.h
 
 # Task A
 A: A.out
@@ -25,4 +27,11 @@ A: A.out
 A.out: mainA
 	./mainA > A.out
 mainA: mainA.c qarc.o qaro.o
+
+# Task B
+B: B.out
+
+B.out: mainB
+	./mainB > B.out
+mainB: mainB.c qaso.o qasc.o qaro.o
 
