Made corrections to a lot of assignments.

--- a/3_eigen/makefile
+++ b/3_eigen/makefile
@@ -20,24 +20,21 @@ A: mainA
 mainA: mainA.c jacobi.o jacobi.h
 
 #Task B
+B: B.out
 mainB_row: mainB_row.c jacobi.o jacobi.h
 mainB_max: mainB_max.c jacobi.o jacobi.h
 mainB_cyc: mainB_cyc.c jacobi.o jacobi.h
-
-B: mainB_row mainB_cyc mainB_max
-	echo "Cyclic sweeps:" > B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_cyc 10 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_cyc 50 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_cyc 100 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_cyc 150 >> B.out
+B.out: mainB_row mainB_cyc mainB_max
+	echo "Cyclic sweeps:" > $@
+	for N in `seq 50 50 300`; do \
+	echo "$$N"; \time -ao $@ -f "\t\ttime: %U" ./mainB_cyc $$N >> $@; \
+	done
 	echo "\nRow-wise:" >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_row 10 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_row 50 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_row 100 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_row 150 >> B.out
+	for N in `seq 50 50 300`; do \
+	echo "$$N"; \time -ao $@ -f "\t\ttime %U" ./mainB_row $$N >> $@; \
+	done
 	echo "\nMaximum element of row:" >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_max 10 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_max 50 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_max 100 >> B.out
-	\time -f "\t\ttime: %U seconds" -ao B.out ./mainB_max 150 >> B.out
+	for N in `seq 50 50 300`; do \
+	echo "$$N"; \time -ao $@ -f "\t\ttime %U" ./mainB_max $$N >> $@; \
+	done
 
